edition = "2023";

package otterscale.containerimage.v1;

//import "api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/otterscale/otterscale/api/containerimage/v1;pb";

service ContainerImageService {
  rpc ListContainerImages(ListContainerImagesRequest) returns (ListContainerImagesResponse) {
  };

  rpc UploadContainerImage(UploadContainerImageRequest) returns (google.protobuf.Empty) {
  };

  rpc DeleteContainerImage(DeleteContainerImageRequest) returns (google.protobuf.Empty) {
  };
}

message ContainerImage {
  string namespace = 1;
  string name = 2;
  string ref = 3;
  int64 size = 4;
  string tag = 5;
  google.protobuf.Timestamp create_at = 6;
}

message ListContainerImagesRequest {
  string scope = 1;
  string namespace = 2;
  string endpoint = 3;
}

message UploadContainerImageRequest {
  string scope = 1;
  string namespace = 2;
  string endpoint = 3;
  string name = 4;
  string tag = 5;
  bytes image_tar = 6;
}

message DeleteContainerImageRequest {
  string scope = 1;
  string namespace = 2;
  string endpoint = 3;
  string name = 4;
  string tag = 5;
}

message ListContainerImagesResponse {
  repeated ContainerImage images = 1;
}
